Fix navbar>a css for spacing

--- a/root/WebRoot/main.css
+++ b/root/WebRoot/main.css
@@ -14,7 +14,7 @@ h1 {
     text-align: center;
 }
 
-.main-navbar>li {
+.main-navbar>a {
     margin: 10px;
     float: none;
     display: inline-block;
